<resources>
    <string name="app_name">WBN_test1</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="label_initial">Please enter your valid student ID number</string>
    <string name="btn_initial">Continue</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="btn_add_student">Add New Student</string>
    <string name="lbl_select_index">Please select your Index number :</string>
    <string name="btn_chk">Check for a Quiz</string>
    <string name="title_activity_answer">Answer the Quiz</string>
    <string name="check_the_server">Check the Server</string>
    <string name="submit">Submit</string>
    <string name="back">Back</string>
    <string name="e">5</string>
    <string name="d">4</string>
    <string name="c">3</string>
    <string name="b">2</string>
    <string name="a">1</string>
</resources>
