<LinearLayout
    android:orientation="vertical"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:background="@mipmap/softclickerb"
    tools:context="example.isuru.com.com.example.dulangasac.mytestfirstproject.AnswerActivity"
    >

    <TextView
        android:textSize="20sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:textColor="@color/white"
        android:id="@+id/textView" />

    <LinearLayout
        android:layout_marginTop="30dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="3">

        <Button
            android:paddingTop="20dp"
            android:paddingBottom="20dp"
            android:id="@+id/ansA"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/a"
            android:textSize="40sp"
            android:layout_weight="1"
            android:layout_marginRight="10dp"/>

        <Button
            android:paddingTop="20dp"
            android:paddingBottom="20dp"
            android:id="@+id/ansB"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/b"
            android:textSize="40sp"
            android:layout_weight="1"
            android:layout_marginRight="5dp"
            android:layout_marginLeft="5dp"/>

        <Button
            android:paddingTop="20dp"
            android:paddingBottom="20dp"
            android:id="@+id/ansC"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/c"
            android:textSize="40sp"
            android:layout_weight="1"
            android:layout_marginLeft="10dp"/>

    </LinearLayout>

    <LinearLayout
        android:layout_marginTop="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="2">



        <Button
            android:paddingTop="20dp"
            android:paddingBottom="20dp"
            android:id="@+id/ansD"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/d"
            android:textSize="40sp"
            android:layout_weight="1"
            android:layout_marginRight="15dp"
            android:layout_marginLeft="50dp"/>

        <Button
            android:paddingTop="20dp"
            android:paddingBottom="20dp"
            android:id="@+id/ansE"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/e"
            android:textSize="40sp"
            android:layout_weight="1"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="50dp"/>


    </LinearLayout>



    <Button
        android:paddingTop="15dp"
        android:paddingBottom="15dp"
        android:paddingRight="20dp"
        android:paddingLeft="20dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="50dp"
        android:id="@+id/submit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/submit"
        android:textSize="25sp"/>

    <Button
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:paddingRight="15dp"
        android:paddingLeft="15dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="30dp"
        android:id="@+id/back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/back"
        android:textSize="18sp"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/textin"/>

</LinearLayout>
