<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    android:background="@mipmap/softclickerb"
    tools:context="example.isuru.com.com.example.dulangasac.mytestfirstproject.MainActivity">


    <TextView
        android:text="@string/lbl_select_index"
        android:textSize="20sp"
        android:textColorHighlight="@color/red"
        android:textColor="@color/white"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textView2"
        android:padding="10dp"
        android:layout_alignParentTop="true"
        android:layout_centerInParent="true"
        android:layout_marginTop="43dp" />

    <Spinner
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/spinner_select_index"
        android:background="@color/white"
        android:layout_marginTop="24dp"
        android:padding="10dp"
        android:layout_below="@+id/textView2"
        android:layout_alignLeft="@+id/btn_check_for_broadcast"
        android:layout_alignStart="@+id/btn_check_for_broadcast"
        android:layout_alignRight="@+id/btn_check_for_broadcast"
        android:layout_alignEnd="@+id/btn_check_for_broadcast" />

    <Button
        android:paddingLeft="40dp"
        android:paddingRight="40dp"
        android:paddingTop="30dp"
        android:paddingBottom="30dp"
        android:textSize="20sp"
        android:layout_gravity="center_horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_chk"
        android:id="@+id/btn_check_for_broadcast"
        android:layout_below="@+id/spinner_select_index"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="45dp" />

    <Button
        android:layout_gravity="center_horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_add_student"
        android:id="@+id/btn_add_student"
        android:layout_marginBottom="98dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true" />



</RelativeLayout>
